[package]
name = "task-heap"
version = "0.1.1"
edition = "2024"

description = "A tool to stack tasks and pop them randomly."
license = "GPL-3.0-only"  # or "Apache-2.0", or "MIT OR Apache-2.0"
repository = "https://github.com/tobe2098/task-heap"

[dependencies]
rand="^0.8.0"
sha2="^0.10.0"
terminal_size = "^0.3.0"
textwrap = "^0.16.0"
directories = "^5.0.0"
